[package]
name = "agent-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# The batteries-included default. Grows as each milestone's modules land
# (provider-anthropic, tool-edit, tool-search are added in their milestones).
default = [
    "provider-openai-compat",
    "provider-anthropic",
    "tool-core",
    "tool-edit",
    "tool-patch",
    "tool-search",
    "tool-metrics",
    "search",
    "git",
    "context-sliding-window",
    "context-summarizing",
    "tokenizer",
    "memory-file",
    "mcp",
    "grpc",
    "subagents",
    "web",
    "tasks",
    "structured",
    "lsp",
    "semantic-search",
    "session",
    "reference",
    "scanner",
    "cache",
    "web-search",
    "provider-router",
    "session-export",
    "skill-write",
    "forge",
    "scheduler",
    "pty",
]

# Each feature forwards to the owning impl crate + drives `register_builtins`.
provider-openai-compat = ["agent-providers/provider-openai-compat"]
provider-anthropic = ["agent-providers/provider-anthropic"]
# Router: composes N providers behind the LlmProvider trait. See parity spec 25.
provider-router = ["agent-providers/provider-router"]
tool-core = ["agent-tools/tool-core"]
tool-edit = ["agent-tools/tool-edit"]
tool-patch = ["agent-tools/tool-patch"]
tool-search = ["agent-tools/tool-search"]
# The `metrics` tool: the agent can read its own live performance registry.
tool-metrics = ["agent-tools/tool-metrics"]
# High-performance code search seam: the tantivy backend + the `search` tool.
search = [
    "dep:agent-search",
    "agent-search/search-tantivy",
    "agent-tools/tool-search-index",
]
# Semantic (embeddings) code search: the Embedder seam + the vector SearchBackend
# + hybrid RRF fusion. Requires `search`. See parity spec 15.
semantic-search = [
    "search",
    "dep:agent-embed",
    "agent-embed/embed-local",
    "agent-search/search-vector",
]
# Content-addressed session history (checkpoint/branch/undo/fork). See spec 19.
session = ["dep:agent-session", "agent-session/session-file"]
# `@file`/`@dir`/`@symbol`/`@url` prompt-reference expansion, routed through the
# Search + Web seams, injection-scanned + token-budgeted. See parity spec 17.
reference = ["dep:agent-reference", "agent-reference/reference-local"]
# Content security scanning: the Scanner seam feeding the Policy gate. See
# parity spec 18 and docs/components/scanner.md.
# Prompt-cache breakpoint placement. See parity spec 24 and
# docs/components/prompt-cache.md.
cache = ["dep:agent-cache", "agent-cache/cache-strategies"]
# Live web search: the WebSearch seam + the `web_search` tool. See parity spec 12.
# Session export: deterministic transcript render + redaction (parity spec 20).
session-export = ["agent-tools/tool-session-export"]
# Skill authoring: the agent writes a reusable SKILL.md (parity spec 30).
skill-write = ["agent-tools/tool-skill-write"]
# Forge: GitHub/GitLab PRs, issues, reviews. See parity spec 27.
# Scheduler: recurring unattended runs. See parity spec 28.
scheduler = ["dep:agent-scheduler", "agent-tools/tool-schedule"]
# PTY: interactive terminal sessions. See parity spec 29.
pty = ["dep:agent-pty", "agent-tools/tool-pty"]
forge = ["dep:agent-forge", "agent-tools/tool-forge", "forge-github", "forge-gitlab"]
forge-github = ["agent-forge/forge-github"]
forge-gitlab = ["agent-forge/forge-gitlab"]
web-search = [
    "dep:agent-web-search",
    "agent-tools/tool-web-search",
    "websearch-brave",
    "websearch-searxng",
]
websearch-brave = ["agent-web-search/websearch-brave"]
websearch-searxng = ["agent-web-search/websearch-searxng"]
scanner = [
    "dep:agent-scanner",
    "agent-scanner/scanner-secret",
    "agent-scanner/scanner-threat",
]
# Multi-branch git seam: the RepoBackend backend (CLI by default) + the git tools.
git = [
    "dep:agent-git",
    "agent-git/git-cli",
    "agent-tools/tool-git",
]
context-sliding-window = ["agent-context/context-sliding-window"]
context-summarizing = ["agent-context/context-summarizing"]
# Tokenizer + cost seam: the approx backend, price table, accurate compaction
# counts + USD/cache accounting (parity spec 23).
tokenizer = ["dep:agent-tokenizer", "agent-tokenizer/tokenizer-approx"]
memory-file = ["agent-memory/memory-file"]
# Connect to external MCP servers and register their tools.
mcp = ["dep:agent-mcp"]
# gRPC seam transports: `= "grpc"` client factories + remote tool workers.
grpc = ["dep:agent-grpc"]
# Expose a `delegate` tool that spawns child agents (isolated context).
subagents = []
# The `web_fetch` tool over the WebBackend seam: the local reqwest transport +
# the tool + the SSRF guard wiring. See parity spec 11.
web = ["dep:agent-web", "agent-web/web-local", "agent-tools/tool-web"]
# The `todo_write` tool over the TaskTracker seam: the in-memory tracker + the
# tool + plan-progress metrics. See parity spec 21.
tasks = ["dep:agent-tasks", "agent-tasks/tasks-memory", "agent-tools/tool-todo"]
# Structured output: the OutputSchema validator seam + the bounded repair loop.
# See parity spec 16.
structured = ["dep:agent-validate", "agent-validate/validate-draft07"]
# The `lsp` tool over the LspBackend seam: the LSP manager (real stdio servers) +
# the tool + diagnostics/navigation metrics. Off unless `[lsp] servers` is set.
# See parity spec 13.
lsp = ["dep:agent-lsp", "agent-lsp/lsp-stdio", "agent-tools/tool-lsp"]

[dependencies]
agent-core.workspace = true
agent-metrics.workspace = true
# These default to no features (see workspace deps); features below opt in.
agent-providers.workspace = true
agent-tools.workspace = true
agent-search = { workspace = true, optional = true }
agent-git = { workspace = true, optional = true }
agent-memory.workspace = true
agent-context.workspace = true
agent-tokenizer = { workspace = true, optional = true }
agent-web = { workspace = true, optional = true }
agent-tasks = { workspace = true, optional = true }
agent-embed = { workspace = true, optional = true }
agent-session = { workspace = true, optional = true }
agent-reference = { workspace = true, optional = true }
agent-scanner = { workspace = true, optional = true }
agent-cache = { workspace = true, optional = true }
agent-web-search = { workspace = true, optional = true }
agent-forge = { workspace = true, optional = true }
agent-scheduler = { workspace = true, optional = true }
agent-pty = { workspace = true, optional = true }
agent-validate = { workspace = true, optional = true }
agent-lsp = { workspace = true, optional = true }
# bash (tool-core) routes through the Sandbox seam; the local + nix backends ship
# unconditionally (the seam is always available). See parity spec 14.
agent-sandbox = { workspace = true, features = ["sandbox-local", "sandbox-nix"] }
agent-mcp = { workspace = true, optional = true }
agent-grpc = { workspace = true, optional = true }
agent-telemetry.workspace = true
async-trait.workspace = true
futures-util.workspace = true
async-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
prometheus.workspace = true
# Robust URL host/scheme extraction for the SSRF guard (parity spec 11).
url.workspace = true

[dev-dependencies]
agent-testkit.workspace = true
rstest.workspace = true
