[package]
name = "agent-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
klickhouse.workspace = true

# OTLP trace export to the ClickStack OTEL collector, layered onto `tracing`
# alongside the ClickHouse-native sink above.
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true

[dev-dependencies]
rstest.workspace = true
