[package]
name = "agent-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared test doubles for the agent-seddon seams (dev use only)."

[dependencies]
agent-core.workspace = true
agent-mcp.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tokio = { workspace = true }

[dev-dependencies]
rstest.workspace = true
